feat: add cyclic image mini app
