# backend/src/gen/images/api/get_next.py
@@ -1,0 +1,21 @@
+# Generated by tools.codegen. Do not edit.
+
+from typing import Literal
+
+from pydantic import BaseModel, Field, constr
+
+
+class Response200(BaseModel):
+    id: str
+    url: str
+
+
+class Response404(BaseModel):
+    code: Literal['images_not_found']
+    message: str
+
+
+class QueryParams(BaseModel):
+    current_id: constr(max_length=255) | None = Field(
+        None, description='Имя картинки, показанной сейчас.'
+    )
